[gd_scene load_steps=5 format=2]

[ext_resource path="res://script/RigidBody2DTornado.gd" type="Script" id=1]
[ext_resource path="res://assets/tornado/tornado-0(16x16).png" type="Texture" id=2]
[ext_resource path="res://assets/tree/0px/51.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 12 )

[node name="Tornado" type="Node2D"]

[node name="TornadoBody" type="RigidBody2D" parent="."]
collision_layer = 0
gravity_scale = 3.0
script = ExtResource( 1 )

[node name="CollisionShapeNG" type="CollisionShape2D" parent="TornadoBody"]
position = Vector2( 0, -3 )
scale = Vector2( 0.25, 0.25 )
shape = SubResource( 1 )

[node name="CollisionShapeG1" type="CollisionShape2D" parent="TornadoBody"]
position = Vector2( 0, -6 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )
disabled = true

[node name="SpriteSeed" type="Sprite" parent="TornadoBody"]
z_index = -1
texture = ExtResource( 3 )

[node name="SpriteG1" type="Sprite" parent="TornadoBody"]
visible = false
position = Vector2( 0, -16 )
scale = Vector2( 1.96875, 1.96875 )
z_index = 2
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="TornadoBody"]

[node name="CollisionShapeNG2" type="CollisionShape2D" parent="TornadoBody/Area2D"]
position = Vector2( 0, -3 )
scale = Vector2( 0.6, 0.25 )
shape = SubResource( 1 )

[connection signal="body_entered" from="TornadoBody/Area2D" to="TornadoBody" method="_on_Area2D_body_entered"]
